# judy

./: AUTHORS  ChangeLog  INSTALL_IT  Makefile.am  Makefile.multi  README  autotools.txt  bootstrap  configure  configure.ac  configure.in  configure.orig  copying
apps/demo/: JudySort.c  Makefile  README  funhist.c  interL.c
doc/: Makefile.am
doc/ext/: Judy_3x.htm  README
make_includes/: README  flavor..mk  flavor.cov.mk  flavor.debug.mk  flavor.product.mk  platform..mk  platform.alpha_64.mk  platform.bsd_ia32.mk  platform.cygwin_ia32.mk  platform.darwin_pm.mk  platform.generic.mk  platform.hpux_ipf.mk  platform.hpux_pa.mk  platform.linux_ia32.mk  platform.linux_ipf.mk  platform.solaris_sparc.mk  platform.win_ia32.mk  platform.win_ipf.mk
src/: Judy.h  Judy1.h  JudyByCount.c  JudyCascade.c  JudyCount.c  JudyCreateBranch.c  JudyDecascade.c  JudyDel.c  JudyFirst.c  JudyFreeArray.c  JudyGet.c  JudyIns.c  JudyInsArray.c  JudyInsertBranch.c  JudyL.h  JudyMalloc.c  JudyMalloc.h  JudyMallocIF.c  JudyMemActive.c  JudyMemUsed.c  JudyPrevNext.c  JudyPrevNextEmpty.c  JudyPrintJP.c  JudyPrivate.h  JudyPrivate1L.h  JudyPrivateBranch.h  JudySL.c  JudySL.h  JudySearchLeaf.c  JudySearchLeafEven.c  JudySearchLeafOdd.c  JudyTables.c  Makefile.am  README  build.bat
src/Judy1/: Makefile.am
src/JudyCommon/: JudyPrevNextEmpty.c  JudyPrivate.h  JudyPrivateBranch.h  JudyTables.c
src/JudyL/: Makefile.am
test/: Checkit  Judy1LCheck.c  Judy1LHCheck.c  Judy1LHTime.c  Judy1LTime.c  README  SLcompare.c  mymalloc.c  timeit.c
test/manual/: Checkit  Judy1LTime.c
