man3_MANS = man/man3/Judy.3x \
	    man/man3/Judy1.3x \
	    man/man3/Judy1_funcs.3x \
	    man/man3/JudyL.3x \
	    man/man3/JudyL_funcs.3x \
	    man/man3/JudySL.3x \
	    man/man3/JudySL_funcs.3x \
	    man/man3/JudyHS.3x \
	    man/man3/JudyHS_funcs.3x \
	    man/man3/J1T.3x \
	    man/man3/J1S.3x \
	    man/man3/J1U.3x \
	    man/man3/J1F.3x \
	    man/man3/J1N.3x \
	    man/man3/J1L.3x \
	    man/man3/J1P.3x \
	    man/man3/J1FE.3x \
	    man/man3/J1NE.3x \
	    man/man3/J1LE.3x \
	    man/man3/J1PE.3x \
	    man/man3/J1C.3x \
	    man/man3/J1BC.3x \
	    man/man3/J1FA.3x \
	    man/man3/J1MU.3x \
	    man/man3/Judy1Test.3x \
	    man/man3/Judy1Set.3x \
	    man/man3/Judy1Unset.3x \
	    man/man3/Judy1First.3x \
	    man/man3/Judy1Next.3x \
	    man/man3/Judy1Last.3x \
	    man/man3/Judy1Prev.3x \
	    man/man3/Judy1FirstEmpty.3x \
	    man/man3/Judy1NextEmpty.3x \
	    man/man3/Judy1LastEmpty.3x \
	    man/man3/Judy1PrevEmpty.3x \
	    man/man3/Judy1Count.3x \
	    man/man3/Judy1ByCount.3x \
	    man/man3/Judy1FreeArray.3x \
	    man/man3/Judy1MemUsed.3x \
	    man/man3/JudyL.3x \
	    man/man3/JLG.3x \
	    man/man3/JLI.3x \
	    man/man3/JLD.3x \
	    man/man3/JLF.3x \
	    man/man3/JLN.3x \
	    man/man3/JLL.3x \
	    man/man3/JLP.3x \
	    man/man3/JLFE.3x \
	    man/man3/JLNE.3x \
	    man/man3/JLLE.3x \
	    man/man3/JLPE.3x \
	    man/man3/JLC.3x \
	    man/man3/JLBC.3x \
	    man/man3/JLFA.3x \
	    man/man3/JLMU.3x \
	    man/man3/JudyLGet.3x \
	    man/man3/JudyLIns.3x \
	    man/man3/JudyLDel.3x \
	    man/man3/JudyLFirst.3x \
	    man/man3/JudyLNext.3x \
	    man/man3/JudyLLast.3x \
	    man/man3/JudyLPrev.3x \
	    man/man3/JudyLFirstEmpty.3x \
	    man/man3/JudyLNextEmpty.3x \
	    man/man3/JudyLLastEmpty.3x \
	    man/man3/JudyLPrevEmpty.3x \
	    man/man3/JudyLCount.3x \
	    man/man3/JudyLByCount.3x \
	    man/man3/JudyLFreeArray.3x \
	    man/man3/JudyLMemUsed.3x \
	    man/man3/JSLG.3x \
	    man/man3/JSLI.3x \
	    man/man3/JSLD.3x \
	    man/man3/JSLF.3x \
	    man/man3/JSLN.3x \
	    man/man3/JSLL.3x \
	    man/man3/JSLP.3x \
	    man/man3/JSLFA.3x \
	    man/man3/JudySLGet.3x \
	    man/man3/JudySLIns.3x \
	    man/man3/JudySLDel.3x \
	    man/man3/JudySLFirst.3x \
	    man/man3/JudySLNext.3x \
	    man/man3/JudySLLast.3x \
	    man/man3/JudySLPrev.3x \
	    man/man3/JudySLFreeArray.3x \
	    man/man3/JHSG.3x \
	    man/man3/JHSI.3x \
	    man/man3/JHSD.3x \
	    man/man3/JHSFA.3x \
	    man/man3/JudyHSGet.3x \
	    man/man3/JudyHSIns.3x \
	    man/man3/JudyHSDel.3x \
	    man/man3/JudyHSFreeArray.3x



man/man3/Judy.3x: 
	../tool/jhton ext/Judy_3x.htm | grep -v '^[   ]*$$'  > man/man3/Judy.3x

man/man3/Judy1.3x:
	../tool/jhton ext/Judy1_3x.htm | grep -v '^[   ]*$$'  > man/man3/Judy1.3x
	cd man/man3; ln -s Judy.3x J1T.3x
	cd man/man3; ln -s Judy.3x J1S.3x
	cd man/man3; ln -s Judy.3x J1U.3x
	cd man/man3; ln -s Judy.3x J1F.3x
	cd man/man3; ln -s Judy.3x J1N.3x
	cd man/man3; ln -s Judy.3x J1L.3x
	cd man/man3; ln -s Judy.3x J1P.3x
	cd man/man3; ln -s Judy.3x J1FE.3x
	cd man/man3; ln -s Judy.3x J1NE.3x
	cd man/man3; ln -s Judy.3x J1LE.3x
	cd man/man3; ln -s Judy.3x J1PE.3x
	cd man/man3; ln -s Judy.3x J1C.3x
	cd man/man3; ln -s Judy.3x J1BC.3x
	cd man/man3; ln -s Judy.3x J1FA.3x
	cd man/man3; ln -s Judy.3x J1MU.3x

man/man3/Judy1_funcs.3x:
	../tool/jhton ext/Judy1_funcs_3x.htm | grep -v '^[   ]*$$' > man/man3/Judy1_funcs.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1Test.3x 
	cd man/man3; ln -s Judy1_funcs.3x Judy1Set.3x 
	cd man/man3; ln -s Judy1_funcs.3x Judy1Unset.3x 
	cd man/man3; ln -s Judy1_funcs.3x Judy1First.3x 
	cd man/man3; ln -s Judy1_funcs.3x Judy1Next.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1Last.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1Prev.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1FirstEmpty.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1NextEmpty.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1LastEmpty.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1PrevEmpty.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1Count.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1ByCount.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1FreeArray.3x
	cd man/man3; ln -s Judy1_funcs.3x Judy1MemUsed.3x

man/man3/JudyL.3x:
	../tool/jhton ext/JudyL_3x.htm | grep -v '^[   ]*$$' > man/man3/JudyL.3x
	cd man/man3; ln -s JudyL.3x JLG.3x
	cd man/man3; ln -s JudyL.3x JLI.3x
	cd man/man3; ln -s JudyL.3x JLD.3x
	cd man/man3; ln -s JudyL.3x JLF.3x
	cd man/man3; ln -s JudyL.3x JLN.3x
	cd man/man3; ln -s JudyL.3x JLL.3x
	cd man/man3; ln -s JudyL.3x JLP.3x
	cd man/man3; ln -s JudyL.3x JLFE.3x
	cd man/man3; ln -s JudyL.3x JLNE.3x
	cd man/man3; ln -s JudyL.3x JLLE.3x
	cd man/man3; ln -s JudyL.3x JLPE.3x
	cd man/man3; ln -s JudyL.3x JLC.3x
	cd man/man3; ln -s JudyL.3x JLBC.3x
	cd man/man3; ln -s JudyL.3x JLFA.3x
	cd man/man3; ln -s JudyL.3x JLMU.3x

man/man3/JudyL_funcs.3x:
	../tool/jhton ext/JudyL_funcs_3x.htm | grep -v '^[   ]*$$' > man/man3/JudyL_funcs.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLGet.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLIns.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLDel.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLFirst.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLNext.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLLast.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLPrev.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLFirstEmpty.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLNextEmpty.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLLastEmpty.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLPrevEmpty.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLCount.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLByCount.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLFreeArray.3x
	cd man/man3; ln -s JudyL_funcs.3x JudyLMemUsed.3x

man/man3/JudySL.3x:
	../tool/jhton ext/JudySL_3x.htm | grep -v '^[   ]*$$' > man/man3/JudySL.3x
	cd man/man3; ln -s JudySL.3x JSLG.3x
	cd man/man3; ln -s JudySL.3x JSLI.3x
	cd man/man3; ln -s JudySL.3x JSLD.3x
	cd man/man3; ln -s JudySL.3x JSLF.3x
	cd man/man3; ln -s JudySL.3x JSLN.3x
	cd man/man3; ln -s JudySL.3x JSLL.3x
	cd man/man3; ln -s JudySL.3x JSLP.3x
	cd man/man3; ln -s JudySL.3x JSLFA.3x

man/man3/JudySL_funcs.3x:
	../tool/jhton ext/JudySL_funcs_3x.htm | grep -v '^[   ]*$$' > man/man3/JudySL_funcs.3x
	cd man/man3; ln -s JudySL_funcs.3x JudySLGet.3x
	cd man/man3; ln -s JudySL_funcs.3x JudySLIns.3x
	cd man/man3; ln -s JudySL_funcs.3x JudySLDel.3x
	cd man/man3; ln -s JudySL_funcs.3x JudySLFirst.3x
	cd man/man3; ln -s JudySL_funcs.3x JudySLNext.3x
	cd man/man3; ln -s JudySL_funcs.3x JudySLLast.3x
	cd man/man3; ln -s JudySL_funcs.3x JudySLPrev.3x
	cd man/man3; ln -s JudySL_funcs.3x JudySLFreeArray.3x

man/man3/JudyHS.3x:
	../tool/jhton ext/JudyHS_3x.htm | grep -v '^[   ]*$$' > man/man3/JudyHS.3x
	cd man/man3; ln -s JudyHS.3x JHSG.3x 
	cd man/man3; ln -s JudyHS.3x JHSI.3x
	cd man/man3; ln -s JudyHS.3x JHSD.3x
	cd man/man3; ln -s JudyHS.3x JHSFA.3x

man/man3/JudyHS_funcs.3x:
	../tool/jhton ext/JudyHS_funcs_3x.htm | grep -v '^[   ]*$$' > man/man3/JudyHS_funcs.3x
	cd man/man3; ln -s JudyHS_funcs.3x JudyHSGet.3x
	cd man/man3; ln -s JudyHS_funcs.3x JudyHSIns.3x
	cd man/man3; ln -s JudyHS_funcs.3x JudyHSDel.3x
	cd man/man3; ln -s JudyHS_funcs.3x JudyHSFreeArray.3x
